# assistantsemailer

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  alembic.ini  audit_db.py  backend_test_failures.txt  check_db.py  check_tokens.py  credentials.json  credentials_backup.json  debug_auth.py  debug_import.py  debug_processor.py  debug_unlocker.py  debug_vault.py  diag.py  docker-compose.yml  e2e_real_verification.py  export_openapi.py  extract_token.py  foundation_report.html  get_token.py  implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  implementation_plan.md.resolved.2  init_db.py  inventory_list.md  inventory_list.md.metadata.json  inventory_list.md.resolved.0  inventory_list.md.resolved.1  list_models.py  main.py  main_root.py  nginx.conf  package-lock.json  page_content_structure.md  project_objectives.md  (+29 more)
spine/: CONTEXT.md  SPEC.json  api_report.html  auth_report.html  backend_report.html  capture_api_screenshot.ps1  capture_auth_screenshot.ps1  capture_backend_screenshot.ps1  capture_db_screenshot.ps1  capture_domain_screenshot.ps1  capture_repo_screenshot.ps1  capture_workflow_screenshot.ps1  db_report.html  domain_report.html  main.py  pyproject.toml  repo_report.html  seed_user.py  visual_verifier.py  visual_verifier_api.py  visual_verifier_auth.py  visual_verifier_db.py  visual_verifier_domain.py  visual_verifier_repo.py  visual_verifier_workflow.py  worker.py  workflow_report.html
spine/api/: deps.py
spine/contracts/: auth_dto.py  user_dto.py
spine/core/: config.py  security.py
spine/db/: __init__.py  database.py  models.py  (+1 more)
(+436 files in other folders)
